--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "vue3_cli",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "release": "standard-version"
   },
   "dependencies": {
     "axios": "^0.20.0",
@@ -29,19 +30,20 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^7.0.0-0",
     "hard-source-webpack-plugin": "^0.13.1",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
     "node-sass": "^4.12.0",
+    "prettier": "^2.1.2",
     "progress-bar-webpack-plugin": "^2.1.0",
     "sass-loader": "^8.0.2",
     "speed-measure-webpack-plugin": "^1.3.3",
-    "thread-loader": "^3.0.1",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-md5-hash": "^0.0.6",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.1",
-    "prettier": "^2.1.2",
+    "standard-version": "^9.0.0",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.1.0"
+    "stylelint-order": "^4.1.0",
+    "thread-loader": "^3.0.1",
+    "webpack-bundle-analyzer": "^3.9.0",
+    "webpack-md5-hash": "^0.0.6"
   },
   "husky": {
     "hooks": {
@@ -52,11 +54,11 @@
     "*.{js,vue}": [
       "npm run lint",
       "prettier --write",
-      "git add ."
+      "git add"
     ],
     "*.{less,scss}": [
       "stylelint --config  ./.stylelintrc --fix",
-      "git add ."
+      "git add"
     ]
   }
 }
