--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
       "prettier --write",
       "git add"
     ],
-    "*.{less,scss}": [
+    "*.{less,scss,vue}": [
       "stylelint --config  ./.stylelintrc --fix",
       "git add"
     ]
