--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
+    "terser-webpack-plugin": "^5.0.3",
     "thread-loader": "^3.0.1",
     "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-md5-hash": "^0.0.6"
+    "webpack-md5-hash": "^0.0.6",
+    "webpackbar": "^5.0.0-3"
   },
   "husky": {
     "hooks": {
