--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "hard-source-webpack-plugin": "^0.13.1",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
-    "node-sass": "^4.12.0",
     "prettier": "^2.1.2",
     "progress-bar-webpack-plugin": "^2.1.0",
+    "sass": "^1.29.0",
     "sass-loader": "^8.0.2",
     "speed-measure-webpack-plugin": "^1.3.3",
     "stylelint": "^13.8.0",
