--- a/package.json
+++ b/package.json
@@ -35,18 +35,15 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
-    "progress-bar-webpack-plugin": "^2.1.0",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
     "speed-measure-webpack-plugin": "^1.3.3",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
-    "terser-webpack-plugin": "^5.0.3",
+    "terser-webpack-plugin": "2.3.6",
     "thread-loader": "^3.0.1",
-    "webpack-bundle-analyzer": "^4.2.0",
-    "webpack-md5-hash": "^0.0.6",
-    "webpackbar": "^5.0.0-3"
+    "webpack-bundle-analyzer": "^4.2.0"
   },
   "husky": {
     "hooks": {
