--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
     "compression-webpack-plugin": "^7.0.0",
     "eslint": "^7.15.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-vue": "^7.0.0-0",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-tags-plugin": "^2.0.17",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
+    "prettier-eslint": "^12.0.0",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
     "speed-measure-webpack-plugin": "^1.3.3",
