--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write \"src/**/*.js\" \"src/**/*.vue\""
   },
   "dependencies": {
+    "@sentry/tracing": "^5.29.2",
+    "@sentry/vue": "^5.29.2",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.4",
