--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
     }
   },
   "lint-staged": {
+    "*.{less,scss,vue}": [
+      "stylelint --config  ./.stylelintrc --fix"
+    ],
     "*.{js,vue}": [
       "npm run lint",
       "prettier --write"
