--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-tags-plugin": "^2.0.17",
     "husky": "^4.3.0",
+    "image-webpack-loader": "^7.0.1",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
     "prettier-eslint": "^12.0.0",
