chore: sentry environment variables

--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,7 @@
 ENV = 'production'
 
 # Sentry
-SENTRY_AUTH_TOKEN = ''
-SENTRY_ORG = ''
-SENTRY_PROJECT = ''
+VUE_APP_SENTRY_AUTH_TOKEN = ''
+VUE_APP_SENTRY_ORG = ''
+VUE_APP_SENTRY_PROJECT = ''
+VUE_APP_SENTRY_DSN = ''
