--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "mock": "vue-cli-service serve --mode mock",
+    "server": "nodemon server",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint --fix",
     "commit": "git cz"
@@ -13,6 +15,12 @@
     "@sentry/vue": "^5.29.2",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "koa-body": "^4.2.0",
+    "koa-logger": "^3.2.1",
+    "koa-onerror": "^4.1.0",
+    "koa-router": "^10.0.0",
+    "koa2": "^2.0.0-alpha.7",
+    "mockjs": "^1.1.0",
     "vue": "^3.0.4",
     "vue-router": "^4.0.1",
     "vuex": "^4.0.0-rc.2"
@@ -40,6 +48,7 @@
     "husky": "^4.3.0",
     "image-webpack-loader": "^7.0.1",
     "lint-staged": "^10.5.1",
+    "nodemon": "^2.0.7",
     "prettier": "^2.1.2",
     "prettier-eslint": "^12.0.0",
     "sass": "^1.29.0",
