--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 ENV = 'development'
-VUE_APP_BASE_API = ''
-VUE_APP_REMOTE_API_URL = 'http://192.168.1.6:3007/v1'
+VUE_APP_BASE_API = "/"
+VUE_APP_BASE_HOST = "http://127.0.0.1/"
