--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@fullhuman/postcss-purgecss": "^3.1.3",
     "@sentry/webpack-plugin": "^1.14.0",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0-0",
+    "autoprefixer": "^9",
     "babel-eslint": "^10.1.0",
+    "cssnano": "^4.1.10",
     "compression-webpack-plugin": "^7.0.0",
     "eslint": "^7.15.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -49,6 +53,7 @@
     "image-webpack-loader": "^7.0.1",
     "lint-staged": "^10.5.1",
     "nodemon": "^2.0.7",
+    "postcss": "^7",
     "prettier": "^2.1.2",
     "prettier-eslint": "^12.0.0",
     "sass": "^1.29.0",
@@ -57,6 +62,7 @@
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "terser-webpack-plugin": "2.3.6",
     "thread-loader": "^3.0.1",
     "webpack-bundle-analyzer": "^4.2.0"
