--- a/package.json
+++ b/package.json
@@ -15,12 +15,7 @@
     "@sentry/vue": "^5.29.2",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
-    "koa-body": "^4.2.0",
-    "koa-logger": "^3.2.1",
-    "koa-onerror": "^4.1.0",
-    "koa-router": "^10.0.0",
-    "koa2": "^2.0.0-alpha.7",
-    "mockjs": "^1.1.0",
+    "koa-log4": "^2.3.2",
     "vue": "^3.0.4",
     "vue-router": "^4.0.1",
     "vuex": "^4.0.0-rc.2"
@@ -39,8 +34,8 @@
     "@vue/compiler-sfc": "^3.0.0-0",
     "autoprefixer": "^9",
     "babel-eslint": "^10.1.0",
-    "cssnano": "^4.1.10",
     "compression-webpack-plugin": "^7.0.0",
+    "cssnano": "^4.1.10",
     "eslint": "^7.15.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.0.0",
@@ -51,7 +46,13 @@
     "html-webpack-tags-plugin": "^2.0.17",
     "husky": "^4.3.0",
     "image-webpack-loader": "^7.0.1",
+    "koa-body": "^4.2.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-onerror": "^4.1.0",
+    "koa-router": "^10.0.0",
+    "koa2": "^2.0.0-alpha.7",
     "lint-staged": "^10.5.1",
+    "mockjs": "^1.1.0",
     "nodemon": "^2.0.7",
     "postcss": "^7",
     "prettier": "^2.1.2",
